tests/invalid/method_keyword_arg/main.py
def run_case() -> None:
    s: str = "a,b,c"

    parts: list[str] = s.split(sep=",")

if __name__ == "__main__":
    run_case()
